# sentiment_analysis

./: .gitignore  .vercelignore  README.md  analyzer (1).py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
dashboard/: app.js  index.html  style.css
src/sentiment_analysis/: __init__.py  __main__.py  config.py  schemas.py
src/sentiment_analysis/analysis/: __init__.py  complexity.py  cultural.py  router.py
src/sentiment_analysis/feedback/: __init__.py  manager.py
src/sentiment_analysis/inference/: __init__.py  llm.py  slm.py
src/sentiment_analysis/ingestion/: __init__.py  chunker.py  ingestor.py
src/sentiment_analysis/orchestration/: __init__.py  analyzer.py  cache.py
src/sentiment_analysis/postprocessing/: __init__.py  absa.py  evidence.py  narrative.py
tests/: __init__.py  test_complexity.py  test_ingestion.py  test_pipeline.py  test_schemas.py
